# jira-report

./: .gitignore  README.md  pyproject.toml
src/jira_report/: cli.py
tests/: test_jira_report.py
